delete scroll snap from leistungnen page to fix scrolling on mobile

--- a/src/styles/pages/leistungen/Leistungen.scss
+++ b/src/styles/pages/leistungen/Leistungen.scss
@@ -153,7 +153,6 @@
       height: 100%;
       background-color: $dark-blue;
       display: flex;
-      scroll-snap-align: start;
     }
   }
 }
@@ -274,7 +273,6 @@
         width: 100vw;
         height: 100%;
         display: flex;
-        scroll-snap-align: start;
       }
     }
   }
